refactoring, remove id,createdTimestamp