@@ -1,6 +1,5 @@
 package com.nitrobox.lombokbuilderhelper;
 
-import com.intellij.codeInspection.AbstractBaseJavaLocalInspectionTool;
 import com.intellij.codeInspection.LocalQuickFix;
 import com.intellij.codeInspection.ProblemDescriptor;
 import com.intellij.codeInspection.ProblemHighlightType;
@@ -11,125 +10,32 @@ import com.intellij.psi.JavaElementVisitor;
 import com.intellij.psi.JavaPsiFacade;
 import com.intellij.psi.PsiAnnotation;
 import com.intellij.psi.PsiClass;
-import com.intellij.psi.PsiElement;
 import com.intellij.psi.PsiElementFactory;
 import com.intellij.psi.PsiElementVisitor;
 import com.intellij.psi.PsiField;
-import com.intellij.psi.PsiLocalVariable;
 import com.intellij.psi.PsiMethod;
 import com.intellij.psi.PsiMethodCallExpression;
 import com.intellij.psi.PsiModifier;
 import com.intellij.psi.PsiModifierList;
 import com.intellij.psi.PsiPrimitiveType;
-import com.intellij.psi.PsiReference;
-import com.intellij.psi.PsiReturnStatement;
-import com.intellij.psi.impl.source.tree.java.PsiIdentifierImpl;
-import com.intellij.psi.impl.source.tree.java.PsiMethodCallExpressionImpl;
-import com.intellij.psi.impl.source.tree.java.PsiReferenceExpressionImpl;
-import com.intellij.psi.search.GlobalSearchScope;
-import com.intellij.psi.search.searches.ReferencesSearch;
-import com.intellij.psi.util.PsiUtil;
 import java.util.Arrays;
-import java.util.HashSet;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Objects;
-import java.util.Queue;
 import java.util.Set;
-import java.util.stream.Collectors;
+import java.util.function.Predicate;
+import org.apache.commons.collections.CollectionUtils;
 import org.jetbrains.annotations.NotNull;
 
-public class LombokBuilderInspection extends AbstractBaseJavaLocalInspectionTool {
+public class LombokBuilderInspection extends AbstractLombokBuilderInspection {
+
     public static final String QUICK_FIX_NAME = "Add all mandatory fields";
     private static final Logger LOG =
             Logger.getInstance("#com.nitrobox.lombokbuilderhelper.LombokBuilderInspection");
     private final LbiQuickFix myQuickFix = new LbiQuickFix();
 
-    private List<String> processMissingFields(PsiElement expression, List<String> mandatoryFields) {
-        Queue<PsiElement> queue = new LinkedList<>();
-        Set<PsiElement> seenElements = new HashSet<>();
-        queue.offer(expression);
 
-        while (!queue.isEmpty()) {
-            PsiElement cur = queue.poll();
-            if (cur != null) {
-                seenElements.add(cur);
-                if (cur instanceof PsiIdentifierImpl) {
-                    mandatoryFields.remove(cur.getText());
-                }
 
-                if (cur instanceof PsiMethodCallExpressionImpl) {
-                    PsiMethod resolvedMethod = ((PsiMethodCallExpressionImpl) cur).resolveMethod();
-                    if (resolvedMethod != null) {
-                        // If the resolved method is not a lombok method, add the return statement to the queue
-                        // to visit its nodes too
-                        if (!Objects.equals(resolvedMethod.getClass().getName(),
-                                "de.plushnikov.intellij.plugin.psi.LombokLightMethodBuilder")) {
-                            for (PsiReturnStatement returnStatement : PsiUtil.findReturnStatements(
-                                    resolvedMethod)) {
-                                queue.offer(returnStatement.getReturnValue());
-                            }
-                            // If we are calling build on an element that was a result of a toBuilder call we assume
-                            // that the builder already has all mandatory fields set
-                        } else if (Objects.equals(resolvedMethod.getName(), "toBuilder")) {
-                            mandatoryFields.clear();
-                            break;
-                        }
-                    }
-                }
 
-                if (cur instanceof PsiReferenceExpressionImpl) {
-                    PsiElement resolvedElement = ((PsiReferenceExpressionImpl) cur).resolve();
-                    if (resolvedElement instanceof PsiLocalVariable) {
-                        PsiElement initializer =
-                                ((PsiLocalVariable) resolvedElement).getInitializer();
-                        if (!seenElements.contains(initializer)) {
-                            queue.offer(initializer);
-                        }
-
-                        Arrays.stream(ReferencesSearch.search(resolvedElement,
-                                GlobalSearchScope.fileScope(resolvedElement.getContainingFile()),
-                                false).toArray(PsiReference.EMPTY_ARRAY)).forEach(reference -> {
-                            if (reference.getElement().getTextRange().getStartOffset()
-                                    < cur.getTextRange().getStartOffset()) {
-                                PsiElement referenceParent = reference.getElement().getParent();
-                                if (!seenElements.contains(referenceParent)) {
-                                    queue.offer(referenceParent);
-                                }
-                            }
-                        });
-                    }
-                }
-
-                for (PsiElement child : cur.getChildren()) {
-                    if (!seenElements.contains(child) && (child instanceof PsiIdentifierImpl
-                            || child instanceof PsiMethodCallExpressionImpl
-                            || child instanceof PsiReferenceExpressionImpl)) {
-                        queue.offer(child);
-                    }
-                }
-            }
-        }
-
-        return mandatoryFields;
-    }
-
-    private PsiClass getContainingBuilderClass(PsiMethod element) {
-        PsiClass aClass = element.getContainingClass();
-        while (aClass != null && !isClassBuilder(aClass)) {
-            aClass = aClass.getContainingClass();
-        }
-
-        return aClass;
-    }
-
-    private boolean isClassBuilder(PsiClass aClass) {
-        final Set<String> builderClassQualifiedNames =
-                Set.of("lombok.Builder", "lombok.experimental.SuperBuilder");
-        return Arrays.stream(aClass.getAnnotations())
-                .anyMatch(annotation -> builderClassQualifiedNames.contains(
-                        annotation.getQualifiedName()));
-    }
 
     private List<String> getMandatoryFields(PsiClass aClass) {
         final Set<String> nonNullAnnotations =
@@ -146,30 +52,39 @@ public class LombokBuilderInspection extends AbstractBaseJavaLocalInspectionTool
             return !isStaticField && (isPrimitiveType || Arrays.stream(annotations)
                     .anyMatch(annotation -> nonNullAnnotations.contains(
                             annotation.getQualifiedName()))) && Arrays.stream(annotations)
-                    .noneMatch(annotation -> Objects.equals(annotation.getQualifiedName(),
+                    .noneMatch(annotation -> Objects.equals(
+                            annotation.getQualifiedName(),
                             defaultBuilderValueAnnotation));
-        }).map(PsiField::getName).collect(Collectors.toList());
+        }).map(PsiField::getName).filter(equalsString("id").negate()).filter(equalsString("createdTimestamp").negate()).toList();
+    }
+
+    private Predicate<String> equalsString(String string) {
+        return string::equals;
     }
 
     @NotNull
     @Override
-    public PsiElementVisitor buildVisitor(@NotNull final ProblemsHolder holder,
+    public PsiElementVisitor buildVisitor(
+            @NotNull
+            final ProblemsHolder holder,
             boolean isOnTheFly) {
         return new JavaElementVisitor() {
             private static final String DESCRIPTION_TEMPLATE =
                     "Lombok builder is missing non nullable fields";
 
             @Override
-            public void visitMethodCallExpression(PsiMethodCallExpression expression) {
+            public void visitMethodCallExpression(@NotNull PsiMethodCallExpression expression) {
                 super.visitMethodCallExpression(expression);
                 PsiMethod resolvedMethod = expression.resolveMethod();
 
-                if (resolvedMethod != null && Objects.equals(resolvedMethod.getClass().getName(),
+                if (resolvedMethod != null && Objects.equals(
+                        resolvedMethod.getClass().getName(),
                         "de.plushnikov.intellij.plugin.psi.LombokLightMethodBuilder")
                         && Objects.equals(resolvedMethod.getName(), "build")) {
                     PsiClass builderClass = getContainingBuilderClass(resolvedMethod);
-                    if (builderClass != null && processMissingFields(expression,
-                            getMandatoryFields(builderClass)).size() > 0) {
+                    if (builderClass != null && CollectionUtils.isNotEmpty(processMissingFields(
+                            expression,
+                            getMandatoryFields(builderClass)))) {
                         holder.registerProblem(expression, DESCRIPTION_TEMPLATE,
                                 ProblemHighlightType.GENERIC_ERROR, myQuickFix);
                     }
@@ -179,6 +94,7 @@ public class LombokBuilderInspection extends AbstractBaseJavaLocalInspectionTool
     }
 
     private class LbiQuickFix implements LocalQuickFix {
+
         @Override
         public void applyFix(@NotNull Project project, @NotNull ProblemDescriptor descriptor) {
             PsiMethodCallExpression expression =
@@ -186,7 +102,8 @@ public class LombokBuilderInspection extends AbstractBaseJavaLocalInspectionTool
             PsiMethod resolvedMethod = expression.resolveMethod();
 
             if (resolvedMethod != null) {
-                List<String> missingFields = processMissingFields(expression,
+                List<String> missingFields = processMissingFields(
+                        expression,
                         getMandatoryFields(getContainingBuilderClass(resolvedMethod)));
 
                 if (!missingFields.isEmpty()) {
